# AI-Agent-Code-Asistance

./: .env.example  .gitignore  README.md  pyproject.toml
src/coding_agent/: __main__.py
src/coding_agent/agents/: README.md  default.py  interactive.py
src/coding_agent/config/: __init__.py
src/coding_agent/enviroment/: README.md
src/coding_agent/models/: README.md  litellm_model.py
src/coding_agent/run/: README.md  run.py
src/coding_agent/run/extra/: config.py
src/coding_agent/run/utils/: save.py
src/coding_agent/utils/: log.py
test_repo/: README.MD  config.json  prompt.txt  run.py
test_repo/process_data/: legacy.py  main.py  utils.py
test_repo/tests/: test_processor.py
